Stop-gap fix for test failure